--- a/Javascript/Dice_Game/index.html
+++ b/Javascript/Dice_Game/index.html
@@ -60,8 +60,9 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .active-player {
-            transform: scale(1.1);
+            transform: scale(1.2);
             text-shadow: 0.2rem 0.2rem 0.5rem yellow;
+            transition: transform 0.4s ease-in-out, text-shadow 0.4s ease-in-out;
         }
         .dice-container {
             position: relative;
@@ -258,8 +259,8 @@
                     <div class="dice" id="dice">
                         <div class="face front">1</div>
                         <div class="face back">2</div>
-                        <div class="face right">3</div>
-                        <div class="face left">4</div>
+                        <div class="face right">4</div>
+                        <div class="face left">3</div>
                         <div class="face top">5</div>
                         <div class="face bottom">6</div>
                     </div>
